--- a/css/screen.css
+++ b/css/screen.css
@@ -10,23 +10,31 @@ body{
   padding-left: 18px;
   margin: 0 auto;
   background: #265a36 url("../img/bg.png") left top no-repeat;
+  box-shadow: 5px 5px 10px rgba(0,0,0, 0.25);
 }
 /* шапка чтраницы */
 #header{
   height: 285px;
 }
+#logo{
+  float: left;
+  padding: 22px 0px 0px 19px;
+}
 /* общее меню */
 #common_menu{
   float: right;
-  margin: 0;
+  margin: 0px 25px 0px 0px;
+  line-height: 8px;
 }
 #common_menu li{
   display: inline-block;
-  padding: 0px 5px;
+  padding: 0px 3px;
+  line-height: 8px;
 }
 #common_menu li a{
-  font-size: 12px;
-  border-left: 2px grey solid;
+  line-height: 8px;
+  font-size: 8px;
+  border-left: 1px grey solid;
   padding-left: 10px;
   color:grey;
   text-decoration: none;
@@ -46,7 +54,7 @@ body{
   float: right;
   height: 46px;
   padding: 0;
-  margin-right: 10px;
+  margin: 14px 10px 0px 0px;
   background: transparent url("../img/header_nav_bg.jpg") no-repeat center center;
   box-shadow: 3px 3px 7px #333;
 }
@@ -55,11 +63,16 @@ body{
   display: inline-block;
   min-width: 146px;
   padding: 0px;
+  vertical-align: top;
 }
 #header .nav li a:hover{
   border-color: white;
   text-shadow: 0 0 10px white, 0 0 20px white, 
-      0 0 30px #0B75AF, 0 0 40px #0B75AF, 0 0 70px #0B75AF;
+    0 0 30px #0B75AF, 0 0 40px #0B75AF, 0 0 70px #0B75AF;
+}
+#header .nav a.active{
+  font-size: 22px;
+  padding-top: 2px;
 }
 #header .nav a{
   -webkit-transition-duration: 800ms;
@@ -78,10 +91,59 @@ body{
   color: white;
   display: block;
   height: 100%;
-  padding: 6px 16px 16px;
+  padding: 8px 16px 16px;
   text-align: center;
   border-top: 6px transparent solid;
   text-shadow: 1px 1px 3px black;
+  font-size: 16px;
+}
+#site_title{
+  text-align: center;
+  clear: both;
+}
+#site_title .site_info{
+  display: inline-block;
+  text-align: left;
+  padding: 54px;
+}
+#site_title .site_info>*{
+  margin: 0px;
+  padding: 0px;
+}
+#site_title .site_info>h1{
+  position: relative;
+  font-size: 28px;
+  font-weight: normal;
+  color:white;
+  text-shadow: 0 0 10px white, 0 0 20px white, 
+    0 0 30px #0B75AF, 0 0 70px yellow;
+}
+#site_title .site_info>h1:before,
+#site_title .site_info>h1:after{
+  position: absolute;
+}
+#site_title .site_info>h1:before{
+  content: "“";
+  left: -15px;
+}
+#site_title .site_info>h1:after{
+  content: "”";
+  right: -15px;
+}
+#site_title .site_info>h2{
+  background-color: #074b48;
+  color: white;
+  font-size: 13px;
+  line-height: 13px;
+  font-weight: normal;
+  text-transform: uppercase;
+  padding: 0px 5px;
+  display: inline;
+}
+#site_title .site_info>.description{
+  color: white;
+  font-size: 7px;
+  padding: 5px 0px;
 }
 /**/
 #middle{
@@ -108,17 +170,19 @@ body{
   font-weight: normal;
   color: #697b2f;
   font-size: 20px;
+  line-height: 20px;
   margin: 0px;
-  padding: 8px 0px 1px;
+  padding: 8px 0px 1px 5px;
 }
 #sidebar>.description{
+  color: #cfcfcf;
   font-size: 7px;
-  padding: 1px 0px 5px;
+  padding: 1px 0px 5px 5px;
   margin: 0px;
 }
 #sidebar>.alexey_suranov{
   border: 1px solid #fff;
-  padding: 1px 4px;
+  padding: 1px 6px;
   color: white;
   font-size: 8px;
   text-transform: uppercase;
@@ -160,9 +224,11 @@ ul.nav.context li a:hover{
   text-decoration: underline;
 }
 .info{
+  color:#8c8c8c;
+  font-size: 12px;
   padding: 3px;
   border: 1px solid #d8d8d8;
-  background: transparent url("../img/grey_bg.png") repeat-x bottom left;
+  background: white url("../img/grey_bg.jpg") repeat-x bottom left;
   margin-bottom: 8px;
 }
 .info:after{
@@ -172,6 +238,15 @@ ul.nav.context li a:hover{
 }
 .info img{
   float: left;
+  margin: 0px 5px 5px 0px;
+}
+.info .name{
+  padding:7px 0px 2px;
+}
+.info .description{
+  color: #a1af51;
+  font-size: 15px;
+  font-weight: bold;
 }
 /* Основное содержимое */
 #content{
@@ -179,24 +254,154 @@ ul.nav.context li a:hover{
   top:-15px;
   border-color:blue;
   overflow: auto;
-/*  background-color: white;*/
   padding-left: 12px;
-  background: transparent url(../img/content_shadow.png) no-repeat left top;
+  background: transparent url("../img/content_shadow.png") no-repeat left top;
 }
 .inner{
   background: white;
   padding: 28px;
+}
+#content .top{
+  padding: 0px 0px 20px;
+}
+#content .top .page_name{
+  background: url("../img/curr_page.png") no-repeat 12px center;
+  padding: 0px 0px 0px 30px;
+  color: #5d7900;
+  font-size: 24px;
+}
+#content .top .bradcrambs{
+  background: #f3f5f6 url("../img/bradcrambs_bullet.png") no-repeat 12px center;
+  float:right;
+  padding: 2px 10px 2px 30px;
+  margin: 5px 0px 0px;
+  border-radius: 5px;
+  box-shadow: inset 0px 3px 10px rgba(50,50,50,0.25);
+}
+#content .top .bradcrambs li{
+  display: inline-block;
+  line-height: 18px;
+}
+#content .top .bradcrambs a{
+  color: #959595;
+  vertical-align: top;
+  font-size: 11px;
+  text-decoration: none;
+  padding: 0px;
+}
+#content .top .bradcrambs li:before{
+  content:">";
+}
+#content .top .bradcrambs li:before,
+#content .top .bradcrambs a{
+  color: #959595;
+}
+#content .top .bradcrambs li:first-child:before{
+  content:" ";
+}
+#content .top .bradcrambs a:hover,
+#content .top .bradcrambs li:last-child a{
+  color: #1a7f70;
+}
+#content .top .bradcrambs li:last-child a{
+  font-weight: bold;
+}
+
+#content .title{
+  height: 137px;
+  background: white url("../img/content_top_bg.jpg") no-repeat top left;
+}
+.data table{
+  width: 100%;
+  border-collapse: collapse;
+  border-bottom: 5px solid #deefce;
+  margin-bottom: 10px;
+}
+.data thead{
+  background-color: #a2b952;
+  color:white;
+}
+.data th{
+  font-weight: normal;
+  padding: 3px;
+  font-size: 14px;
+  text-align: center;
+}
+.data tbody tr{
+  border-top: 2px solid #d2d9e4;
+}
+.data tbody tr:hover{
+  background-color: #F8FAF1;
+}
+.data tbody td{
+  color:#576d83;
+  font-size: 13px;
+  padding: 5px;
+}
+.data tbody td.numb{
+  text-align: center;
 }
 .paging input{
   background-color: white;
   color: black;
 }
 .paging input:focus{
-  /*background-color: #0099ff;*/
+  background-color: #265a36;
   color: white;
-  text-shadow: 1px -2px 2px grey;
 }
-
+.paging input,
+.paging select{
+  border: 1px solid #a3c59f;
+  color: #777;
+}
+.paging [type="submit"],
+.paging .refresh{
+  background-color: #5bae7b;
+  border-radius: 3px;
+  color: white;
+  cursor: pointer;
+}
+.paging .refresh{
+  float: right;
+}
+.pages{
+  margin: 20px;
+  clear: both;
+  text-align: center;
+}
+.pages a{
+  text-decoration: none;
+  font-size: 12px;
+  font-weight: bold;
+}
+.first,
+.previus,
+.next,
+.last{
+  background-color: #88c3d6;
+  color: white;
+  padding: 1px 5px 2px;;
+  border-radius: 5px;
+}
+.first:hover,
+.previus:hover,
+.next:hover,
+.last:hover{
+  background-color: #63AFC9;
+}
+.pages .numbers a{
+  color:#666666;
+  border-left: 1px solid #666666;
+  padding: 2px 2px 1px 8px;
+  font-weight: normal;
+}
+.pages .numbers a.curr,
+.pages .numbers a:hover{
+  color:#339966;
+}
+.pages .numbers a.curr{
+  font-weight: bold;
+}
 #footer{
   clear: both;
   color: white;
