Исправлена проблема с "прыгающим" главным меню у неавторизованного рользователя (причина была в том, что без последнего пункта главное меню вмещалось втуже строку что и логотип и общее меню)

--- a/css/screen.css
+++ b/css/screen.css
@@ -27,6 +27,8 @@ body{
   float: right;
   margin: 0px 25px 0px 0px;
   line-height: 8px;
+  width: 600px;
+  text-align: right;
 }
 #common_menu li{
   display: inline-block;
